--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "rollup -c rollup.config.mjs",
     "generate-icons": "node scripts/generateIcons.js",
-    "ship": "git add . && git commit -m 'Build' && git push && npm run generate-icons && npm run build && npm version patch && npm publish --access public"
+    "ship-git": "git add . && git commit -m 'Build' && git push && npm run generate-icons && npm run build && npm version patch && npm publish --access public",
+    "ship": "npm run generate-icons && npm run build && npm version patch && npm publish --access public"
   },
   "keywords": [
     "react",
