--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "rollup -c rollup.config.mjs",
     "generate-icons": "node scripts/generateIcons.js",
-    "ship-git": "npm run generate-icons &&git add . && git commit -m 'Build' && git push origin main && npm run build && npm version patch && npm publish --access public",
+    "ship-git": "npm run generate-icons && npm run build && git add . && git commit -m 'Build' && git push origin main && npm version patch && npm publish --access public",
     "ship": "npm run generate-icons && npm run build && npm version patch && npm publish --access public"
   },
   "keywords": [
