--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rollup -c rollup.config.mjs",
     "generate-icons": "node scripts/generateIcons.js",
     "ship-git": "npm run generate-icons && npm run build && git add . && git commit -m 'Build' && git push origin main && npm version patch && npm publish --access public",
-    "ship": "npm run generate-icons && npm run build && npm version patch && npm publish --access public"
+    "ship": "npm run generate-icons && npm run build && npm version patch && npm publish --access public",
+    "postinstall": "node scripts/install.js"
   },
   "keywords": [
     "react",
@@ -27,7 +28,8 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "inquirer": "^8.2.4"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
