--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "generate-icons": "node scripts/generateIcons.js",
     "ship-git": "npm run generate-icons && npm run build && git add . && git commit -m 'Build' && git push origin main && npm version patch && npm publish --access public",
     "ship": "npm run generate-icons && npm run build && npm version patch && npm publish --access public",
-    "postinstall": "node scripts/install.js"
+    "postinstall": "node install.js"
   },
   "keywords": [
     "react",
