--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethereal-icons",
-  "version": "1.0.43",
+  "version": "1.0.35",
   "description": "Ethereal Icons is a React icon library that provides a collection of customizable and scalable SVG icons for modern web applications.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -10,7 +10,7 @@
     "generate-icons": "node scripts/generateIcons.js",
     "ship-git": "npm run generate-icons && npm run build && git add . && git commit -m 'Build' && git push origin main && npm version patch && npm publish --access public",
     "ship": "npm run generate-icons && npm run build && npm version patch && npm publish --access public",
-    "postinstall": "node scripts/install.js"
+    "postinstall": "node install.js"
   },
   "keywords": [
     "react",
@@ -45,7 +45,6 @@
     "typescript": "^5.5.3"
   },
   "files": [
-    "dist",
-    "scripts"
+    "dist"
   ]
 }
