--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethereal-icons",
-  "version": "1.0.36",
+  "version": "1.0.48",
   "description": "Ethereal Icons is a React icon library that provides a collection of customizable and scalable SVG icons for modern web applications.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -22,7 +22,8 @@
     "typescript",
     "scalable",
     "customizable",
-    "opacity"
+    "opacity",
+    "react-icons"
   ],
   "author": "José Campillo",
   "license": "ISC",
