--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "build": "rollup -c rollup.config.mjs",
     "generate-icons": "node scripts/generateIcons.js",
-    "ship-git": "npm run generate-icons && npm run build && git add . && git commit -m 'Build' && git push origin main && npm version patch && npm publish --access public",
-    "ship": "npm run generate-icons && npm run build && npm version patch && npm publish --access public"
+    "ship-git": "npm run generate-icons && npm run build && git add . && git commit -m 'Build' && git push origin main && npm version patch && npm publish --access public && npm run create-release",
+    "ship": "npm run generate-icons && npm run build && npm version patch && npm publish --access public",
+    "create-release": "node scripts/createRelease.js"
   },
   "keywords": [
     "react",
