--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
   ],
   "author": "José Campillo",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jcampillo1207/react-ethereal-icons.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "dependencies": {
     "inquirer": "^8.2.6",
     "react": "^18.3.1",
