--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "inquirer": "^8.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
