--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "José Campillo",
   "license": "ISC",
   "dependencies": {
+    "@million/lint": "^1.0.0-rc.76",
     "inquirer": "^8.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
